--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Pull code on remote server
       run: ssh -vvv -i ~/.ssh/id_rsa nikita_khramov@34.16.177.159 "cd /home/nikita_khramov/forger/forgeserver && 
+        git stash &&
         git pull && 
         source /home/nikita_khramov/forger/forgervenv/bin/activate &&
         pip3 install -r /home/nikita_khramov/forger/forgeserver/requirements.txt &&
